--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UpcomingMatches"></activity>
+        <activity android:name=".ResultsActivity"></activity>
+        <activity android:name=".UpcomingMatches" />
         <activity android:name=".StandingsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
