--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultsActivity"></activity>
-        <activity android:name=".UpcomingMatches" />
-        <activity android:name=".StandingsActivity" />
-        <activity android:name=".ScorersActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ResultsActivity"/>
+        <activity android:name=".UpcomingMatchesActivity"/>
+        <activity android:name=".StandingsActivity"/>
+        <activity android:name=".ScorersActivity"/>
+        <activity android:name=".MainActivity"/>
+        <activity
+            android:name=".IntroActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
